Add participation rubric section to index.html

--- a/index.html
+++ b/index.html
@@ -486,6 +486,21 @@
                 </iframe>
             </div>
             
+            <!-- Participation Rubric -->
+            <div style="background: white; padding: 30px; border-radius: 15px; margin-bottom: 30px; border-left: 5px solid #DC143C;">
+                <h3 style="color: #01579B; font-size: 1.8em; margin-bottom: 15px;">📋 Participation Rubric</h3>
+                <p style="color: #5D4037; margin-bottom: 20px; font-size: 1.1em;">Fill out your participation rubric after each class. Remember: participation counts for 30% of your grade!</p>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_ux8JCTl-2ckVoFbFTiqy78ndDFJ-Uaf3GQqtipQu_DA5SQ/viewform?embedded=true" 
+                        width="100%" 
+                        height="2165" 
+                        frameborder="0" 
+                        marginheight="0" 
+                        marginwidth="0"
+                        style="border: 2px solid #DC143C; border-radius: 10px;">
+                    Loading…
+                </iframe>
+            </div>
+            
             <!-- View My Grades - Placeholder -->
             <div style="background: linear-gradient(135deg, #FFF9C4 0%, #FFFDE7 100%); padding: 30px; border-radius: 15px; margin-bottom: 30px; border: 3px solid #FDD835;">
                 <h3 style="color: #01579B; font-size: 1.8em; margin-bottom: 15px;">📊 View My Grades</h3>
