Update iframe source for Spanish accents app

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             <div style="background: white; padding: 30px; border-radius: 15px; margin-bottom: 30px; border-left: 5px solid #87CEEB;">
                 <h3 style="color: #01579B; font-size: 1.8em; margin-bottom: 15px;">📱 IPA Pronunciation App</h3>
                 <p style="color: #5D4037; margin-bottom: 20px; font-size: 1.1em;">Type any Spanish word and get IPA transcription in 4 different accents (Mexican, Argentinian, Spanish, Dominican).</p>
-                <iframe src="https://francuscus.github.io/spanish-accents/" 
+                <iframe src="https://francuscus.github.io/acentos/" 
                         width="100%" 
                         height="600px"
                         style="border: 2px solid #87CEEB; border-radius: 10px; background: white;">
