--- a/class-02.html
+++ b/class-02.html
@@ -103,9 +103,9 @@
                 <p><strong>Materials needed: Paper and pencil</strong></p>
                 <p style="margin-top: 10px"><strong>Demonstration of memory techniques in action</strong></p>
                 <ul style="margin-left: 20px">
-                    <li style="margin: 8px 0;color: #01579B">Instructor <span style="color: #FFD600">he/she</span> <img src="main/images/pronouns/he she it..png" alt="he/she" width="20" style="display: inline;vertical-align: middle"> will demonstrate memory techniques</li>
-                    <li style="margin: 8px 0;color: #01579B">Students <span style="color: #2E7D32">they</span> <img src="main/images/pronouns/they, ellos ellas.png" alt="they" width="20" style="display: inline;vertical-align: middle"> participate in the activity</li>
-                    <li style="margin: 8px 0;color: #01579B">See how mnemonics improve recall immediately</li>
+                    <li style="margin: 8px 0;color: #01579B">Instructor <span style="color: #FFD600"></span> <img src="main/images/pronouns/he she it..png" alt="he/she" width="20" style="display: inline;vertical-align: middle"> will demonstrate memory techniques</li>
+                    <li style="margin: 8px 0;color: #01579B">Students <span style="color: #2E7D32"></span> <img src="main/images/pronouns/they, ellos ellas.png" alt="they" width="20" style="display: inline;vertical-align: middle"> participate in the activity</li>
+                    <li style="margin: 8px 0;color: #01579B">See <img src="main/images/pronouns/you all ustedes.png" alt="you" width="20" style="display: inline;vertical-align: middle">how mnemonics improve recall immediately</li>
                 </ul>
                 <div style="background: #FFF9C4;border: 2px solid #FBC02D;border-radius: 10px;padding: 15px;margin-top: 15px">
                     <strong style="color: #6A1B9A">Get Ready:</strong> <span style="color: #5D4037">This activity will prove how powerful these techniques are</span>
